# eth-contract

./: .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  flake.nix  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
eth_contract/: __init__.py  contract.py  create2.py  create3.py  dehumanizer.py  deploy_utils.py  entrypoint.py  erc20.py  history_storage.py  human.py  multicall3.py  slots.py  struct.py  test_contract.py  utils.py  weth.py
eth_contract/abis/: createx.json  erc20.json
eth_contract/deployments/: EntryPoint07.json
tests/: conftest.py  contracts.py  test_abi.py  test_contract.py  test_contract_function.py  test_dehumanizer.py  test_erc20.py  test_human.py  test_slots.py  test_struct.py  test_struct_decode.py  trace.py
tests/contracts/: MockERC20.json
