[project]
name = "eth-contract"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "eth-abi>=5.0.0",
    "web3>=7.12.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "pyrevm>=0.3.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
eth_contract = ["py.typed"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]

[tool.uv.sources]
pyrevm = { git = "https://github.com/yihuang/pyrevm.git" }
